[project]
name = "weibo-rag"
version = "0.1.0"
description = "微博人物多账号RAG问答系统"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "WeiboRAG Team"}
]
keywords = ["rag", "weibo", "nlp", "llm", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "beautifulsoup4>=4.13.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.104.0",
    "modelscope>=1.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.0",
    "requests>=2.32.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_modules"]
include = [
    "config.py",
    "main.py",
]


[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

